--- a/deb/openmediavault/usr/share/openmediavault/locale/openmediavault.pot
+++ b/deb/openmediavault/usr/share/openmediavault/locale/openmediavault.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-06-27 23:40+0200\n"
+"POT-Creation-Date: 2016-07-07 07:26+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,6 +22,9 @@ msgid "% completed ..."
 msgstr ""
 
 msgid "%s (%s available)"
+msgstr ""
+
+msgid "%s [%s (%d%%) used, %s available]"
 msgstr ""
 
 msgid "%s [on %s, %s]"
@@ -2293,7 +2296,7 @@ msgstr ""
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr ""
 
-msgid "Please first select a volume."
+msgid "Please first select a device."
 msgstr ""
 
 msgid "Please make sure that the shared folder is publicly writable if new files are allowed."
@@ -2768,9 +2771,6 @@ msgid "Select a shell ..."
 msgstr ""
 
 msgid "Select a user name ..."
-msgstr ""
-
-msgid "Select a volume ..."
 msgstr ""
 
 msgid "Select an authentication mode ..."
@@ -3680,9 +3680,6 @@ msgid "Vietnam"
 msgstr ""
 
 msgid "VirtIO device"
-msgstr ""
-
-msgid "Volume"
 msgstr ""
 
 msgid "WINS"
