--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (3.0.26) stable; urgency=low
 
+  * Update locales.
   * Various improvements.
   * Mantis 0001564: Disabled Samba service should disable netbios daemon.
   * Mantis 0001568: Can't start OMV using omv-initsystem.
