--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2016-06-27 23:40+0200\n"
-"PO-Revision-Date: 2016-06-27 21:40+0000\n"
+"POT-Creation-Date: 2016-07-07 07:26+0200\n"
+"PO-Revision-Date: 2016-07-07 05:26+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
@@ -25,6 +25,9 @@ msgstr "% c dokončeno…"
 
 msgid "%s (%s available)"
 msgstr "%s (%s k dispozici)"
+
+msgid "%s [%s (%d%%) used, %s available]"
+msgstr ""
 
 msgid "%s [on %s, %s]"
 msgstr "%s [na %s, %s]"
@@ -944,7 +947,7 @@ msgstr "Opravdu chcete odstranit obsah sdílené složky? Odstranění bude trva
 msgid ""
 "Do you really want to reset the UI settings to their default values, e.g. "
 "the order of the grid columns?"
-msgstr ""
+msgstr "Opravdu chcete obnovit výchozí stav webového rozhraní, jako např. pořadí sloupců mřížky?"
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2277,7 +2280,7 @@ msgid "Paraguay"
 msgstr "Paraguay"
 
 msgid "Parent Device"
-msgstr ""
+msgstr "Nadřazené zařízení"
 
 msgid "Parent interface"
 msgstr "Nadřazené rozhraní"
@@ -2394,8 +2397,8 @@ msgstr "Podrobnosti jsou uvedeny v <a href='http://www.samba.org/samba/docs/man/
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Zvolte způsob kompletního smazání zařízení nebo celou akci zrušte kliknutím na Zrušit."
 
-msgid "Please first select a volume."
-msgstr "Nejprve je třeba zvolit svazek."
+msgid "Please first select a device."
+msgstr ""
 
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
@@ -2670,12 +2673,12 @@ msgid "Reset"
 msgstr "Vrátit na výchozí hodnoty"
 
 msgid "Reset UI to defaults"
-msgstr ""
+msgstr "Resetovat stav webového rozhraní"
 
 msgid ""
 "Reset the UI settings to their default values, e.g. the order of the grid "
 "columns."
-msgstr ""
+msgstr "Obnovit výchozí stav webového rozhraní, jako např. pořadí sloupců mřížky."
 
 msgid "Resize"
 msgstr "Změnit velikost"
@@ -2892,9 +2895,6 @@ msgstr "Vyberte shell ..."
 
 msgid "Select a user name ..."
 msgstr "Vyberte uživatelské jméno ..."
-
-msgid "Select a volume ..."
-msgstr "Vyberte svazek ..."
 
 msgid "Select an authentication mode ..."
 msgstr "Vyberte režim ověřování…"
@@ -3914,9 +3914,6 @@ msgstr "Vietnam"
 
 msgid "VirtIO device"
 msgstr "VirtIO zařízení"
-
-msgid "Volume"
-msgstr "Svazek"
 
 msgid "WINS"
 msgstr "Jmenná služba WINS"
