Mantis 0001567: Cannot enable quarantine infected files feature.

--- a/deb/openmediavault-clamav/debian/changelog
+++ b/deb/openmediavault-clamav/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault-clamav (3.2.2) stable; urgency=low
 
   * Mantis 0001566: Fix configuration file issue.
+  * Mantis 0001567: Cannot enable quarantine infected files feature.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 05 Jul 2016 16:04:09 +0200
 
