--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_CN/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-07-07 07:26+0200\n"
-"PO-Revision-Date: 2016-07-07 05:26+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-07-08 08:21+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,7 +27,7 @@ msgid "%s (%s available)"
 msgstr "%s (%s 可用)"
 
 msgid "%s [%s (%d%%) used, %s available]"
-msgstr ""
+msgstr "%s [%s (%d%%) 已使用, %s 可用]"
 
 msgid "%s [on %s, %s]"
 msgstr "%s [on %s, %s]"
@@ -947,7 +947,7 @@ msgstr "确定删除共享文件夹的内容？删除后将无法恢复。"
 msgid ""
 "Do you really want to reset the UI settings to their default values, e.g. "
 "the order of the grid columns?"
-msgstr ""
+msgstr "确认要重设 UI 设置为默认值，例如栏位顺序？"
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2280,7 +2280,7 @@ msgid "Paraguay"
 msgstr "巴拉圭"
 
 msgid "Parent Device"
-msgstr ""
+msgstr "父设备"
 
 msgid "Parent interface"
 msgstr "父接口"
@@ -2398,7 +2398,7 @@ msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "请选择擦除设备的方式或者选择“取消”中止。"
 
 msgid "Please first select a device."
-msgstr ""
+msgstr "请先选择一个设备。"
 
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
@@ -2673,12 +2673,12 @@ msgid "Reset"
 msgstr "重设"
 
 msgid "Reset UI to defaults"
-msgstr ""
+msgstr "恢复默认 UI 状态"
 
 msgid ""
 "Reset the UI settings to their default values, e.g. the order of the grid "
 "columns."
-msgstr ""
+msgstr "重设 UI 设置为默认值，例如栏位顺序。"
 
 msgid "Resize"
 msgstr "调整大小"
