--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-07-07 07:26+0200\n"
-"PO-Revision-Date: 2016-07-07 05:26+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-07-11 22:11+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/votdev/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,7 +29,7 @@ msgid "%s (%s available)"
 msgstr "%s (%s disponible)"
 
 msgid "%s [%s (%d%%) used, %s available]"
-msgstr ""
+msgstr "%s [%s (%d%%) usado, %s disponible]"
 
 msgid "%s [on %s, %s]"
 msgstr "%s [en %s, %s]"
@@ -2400,7 +2400,7 @@ msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Por favor elija el metodo para borrar el dispositivo o pulse 'Cancelar' para salir."
 
 msgid "Please first select a device."
-msgstr ""
+msgstr "Seleccione primero un dispositivo"
 
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
