--- a/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/zh_TW/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-07-07 07:26+0200\n"
-"PO-Revision-Date: 2016-07-07 05:26+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-07-08 23:35+0000\n"
+"Last-Translator: kochin <kochinc@outlook.com>\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/votdev/openmediavault/language/zh_TW/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,7 +27,7 @@ msgid "%s (%s available)"
 msgstr "%s (%s 可用)"
 
 msgid "%s [%s (%d%%) used, %s available]"
-msgstr ""
+msgstr "%s [%s (%d%%) 已用, %s 可用]"
 
 msgid "%s [on %s, %s]"
 msgstr "%s [位於 %s, %s]"
@@ -2398,7 +2398,7 @@ msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "請選擇抹除裝置的方式或選 '取消' 來中止。"
 
 msgid "Please first select a device."
-msgstr ""
+msgstr "請先選擇一個裝置。"
 
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
