--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.28) stable; urgency=low
+
+  * Fix locale issue.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 19 Jul 2016 23:13:39 +0200
+
 openmediavault (3.0.27) stable; urgency=low
 
   * Fix locale issue. The PHP function doubleval/floatval does not respect
