--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.29) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 20 Jul 2016 07:36:58 +0200
+
 openmediavault (3.0.28) stable; urgency=low
 
   * Fix locale issue.
