--- a/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/cs_CZ/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-07-07 07:26+0200\n"
-"PO-Revision-Date: 2016-07-07 05:26+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-07-17 19:55+0000\n"
+"Last-Translator: Pavel Borecki <pavel.borecki@gmail.com>\n"
 "Language-Team: Czech (Czech Republic) (http://www.transifex.com/votdev/openmediavault/language/cs_CZ/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,7 +27,7 @@ msgid "%s (%s available)"
 msgstr "%s (%s k dispozici)"
 
 msgid "%s [%s (%d%%) used, %s available]"
-msgstr ""
+msgstr "%s [%s (%d%%) použito, %s k dispozici]"
 
 msgid "%s [on %s, %s]"
 msgstr "%s [na %s, %s]"
@@ -2398,7 +2398,7 @@ msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Zvolte způsob kompletního smazání zařízení nebo celou akci zrušte kliknutím na Zrušit."
 
 msgid "Please first select a device."
-msgstr ""
+msgstr "Nejprve je třeba zvolit zařízení."
 
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
