--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -14,8 +14,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-07-07 07:26+0200\n"
-"PO-Revision-Date: 2016-07-07 05:26+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-07-14 07:51+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,7 +31,7 @@ msgid "%s (%s available)"
 msgstr "%s (%s disponibile)"
 
 msgid "%s [%s (%d%%) used, %s available]"
-msgstr ""
+msgstr "%s [%s (%d%%) utilizzato, %s disponibile]"
 
 msgid "%s [on %s, %s]"
 msgstr "%s [su %s, %s]"
@@ -951,7 +951,7 @@ msgstr "Sicuro di voler eliminare il contenuto della cartella condivisa? Sarà d
 msgid ""
 "Do you really want to reset the UI settings to their default values, e.g. "
 "the order of the grid columns?"
-msgstr ""
+msgstr "Vuoi davvero ripristinare le impostazioni dell'interfaccia utente ai valori di default, ad esempio l'ordine delle colonne?"
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2284,7 +2284,7 @@ msgid "Paraguay"
 msgstr "Paraguai"
 
 msgid "Parent Device"
-msgstr ""
+msgstr "Dispositivo genitore"
 
 msgid "Parent interface"
 msgstr "Interfaccia genitore"
@@ -2402,7 +2402,7 @@ msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "Per favore scegli il metodo per il ripristino del dispositivo o 'Annulla' per annullare."
 
 msgid "Please first select a device."
-msgstr ""
+msgstr "Per favore seleziona prima un dispositivo."
 
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
@@ -2677,12 +2677,12 @@ msgid "Reset"
 msgstr "Reset"
 
 msgid "Reset UI to defaults"
-msgstr ""
+msgstr "Ripristino interfaccia utente"
 
 msgid ""
 "Reset the UI settings to their default values, e.g. the order of the grid "
 "columns."
-msgstr ""
+msgstr "Ripristinare le impostazioni dell'interfaccia utente ai valori di default, ad esempio l'ordine delle colonne."
 
 msgid "Resize"
 msgstr "Ridimensiona"
