--- a/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/ja_JP/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-07-07 07:26+0200\n"
-"PO-Revision-Date: 2016-07-07 05:26+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-07-14 01:15+0000\n"
+"Last-Translator: Toshihiro Kan <kansuke4649@gmail.com>\n"
 "Language-Team: Japanese (Japan) (http://www.transifex.com/votdev/openmediavault/language/ja_JP/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -26,7 +26,7 @@ msgid "%s (%s available)"
 msgstr "%s (%s 有効)"
 
 msgid "%s [%s (%d%%) used, %s available]"
-msgstr ""
+msgstr "%s [%s (%d%%) 使用中, %s 利用可能]"
 
 msgid "%s [on %s, %s]"
 msgstr "%s [%s 上, %s]"
@@ -2397,7 +2397,7 @@ msgid "Please choose the method to wipe the device or 'Cancel' to abort."
 msgstr "デバイスをワイプする方法を選択してください。中止する場合は'キャンセル'を選択してください。"
 
 msgid "Please first select a device."
-msgstr ""
+msgstr "最初にデバイスを選択してください。"
 
 msgid ""
 "Please make sure that the shared folder is publicly writable if new files "
