--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (3.0.30) stable; urgency=low
+
+  * Mantis 0001579: Cannot find disk/by-id device file.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 22 Jul 2016 14:58:15 +0200
+
 openmediavault (3.0.29) stable; urgency=low
 
   * Various improvements.
