--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.30) stable; urgency=low
 
   * Mantis 0001579: Cannot find disk/by-id device file.
+  * Mantis 0001581: The format 'devicename' is not defined.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 22 Jul 2016 14:58:15 +0200
 
