--- a/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/hu_HU/openmediavault.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-07-07 07:26+0200\n"
-"PO-Revision-Date: 2016-07-20 17:30+0000\n"
+"PO-Revision-Date: 2016-07-25 06:16+0000\n"
 "Last-Translator: Grawens <szabolcs.szanyi@gmail.com>\n"
 "Language-Team: Hungarian (Hungary) (http://www.transifex.com/votdev/openmediavault/language/hu_HU/)\n"
 "MIME-Version: 1.0\n"
@@ -947,7 +947,7 @@ msgstr "Valóban el szeretnéd távolítani a megosztott mappa tartalmát? Végl
 msgid ""
 "Do you really want to reset the UI settings to their default values, e.g. "
 "the order of the grid columns?"
-msgstr ""
+msgstr "Valóban vissza szeretnéd állítani az UI beállításokat alap értékekre, mint például a rács oszlop sorrend?"
 
 msgid ""
 "Do you really want to resize the selected file system? You have to do that "
@@ -2678,7 +2678,7 @@ msgstr "UI alapértékek visszaállítása"
 msgid ""
 "Reset the UI settings to their default values, e.g. the order of the grid "
 "columns."
-msgstr ""
+msgstr "Az UI beállítások visszaállítása alap értékekre, mint például a rács oszlop sorrend."
 
 msgid "Resize"
 msgstr "Átméretezés"
