--- a/deb/openmediavault-forkeddaapd/debian/changelog
+++ b/deb/openmediavault-forkeddaapd/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-forkeddaapd (3.1.1) stable; urgency=low
+
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 27 Jul 2016 00:23:52 +0200
+
 openmediavault-forkeddaapd (3.1) stable; urgency=low
 
   * Adapt to new framework.
