--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-nut (3.2.1) stable; urgency=low
+
+  * Update locales.
+  * Various improvements.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 27 Jul 2016 00:26:20 +0200
+
 openmediavault-nut (3.2) stable; urgency=low
 
   * Adapt to new framework.
