--- a/deb/openmediavault-usbbackup/debian/changelog
+++ b/deb/openmediavault-usbbackup/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault-usbbackup (3.2.6) stable; urgency=low
+
+  * Mantis 0001584: Run command from web UI does not work.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 29 Jul 2016 8:43:52 +0200
+
 openmediavault-usbbackup (3.2.5) stable; urgency=low
 
   * Mantis 0001579: Cannot find disk/by-id device file.
