--- a/deb/openmediavault-route/usr/share/openmediavault/locale/zh_CN/openmediavault-route.po
+++ b/deb/openmediavault-route/usr/share/openmediavault/locale/zh_CN/openmediavault-route.po
@@ -3,14 +3,14 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
-# songming <by@songming.me>, 2013-2014
+# songming <by@songming.me>, 2013-2014,2016
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2016-04-23 19:15+0200\n"
-"PO-Revision-Date: 2016-04-23 17:16+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2016-06-19 02:08+0000\n"
+"Last-Translator: songming <by@songming.me>\n"
 "Language-Team: Chinese (China) (http://www.transifex.com/votdev/openmediavault/language/zh_CN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,7 +34,7 @@ msgid "Gateway used to reach the above network address."
 msgstr "网关用于到达上述网络地址。"
 
 msgid "IP or network address."
-msgstr "IP或网络地址。"
+msgstr "IP 或网络地址。"
 
 msgid "Network"
 msgstr "网络"
